# pento

./: .gitignore  Readme.md  pyproject.toml
notebooks/: local_rearrangement_visualization.ipynb  pipeline_validation.ipynb
src/pento/: __init__.py  classification.py  cli.py  normalization.py  pipeline.py  preprocessing.py  rearrangement.py  segmentation.py  storage.py  visualization.py
tests/: test_classification_normalization.py  test_pipeline.py  test_preprocessing.py  test_rearrangement.py  test_segmentation.py  test_visualization.py
